fix scrolling on mobile screen

--- a/src/components/modal-thanks/style.scss
+++ b/src/components/modal-thanks/style.scss
@@ -1,20 +1,25 @@
 @use "../../scss/" as *;
 
 .modal {
-    width: 30%;
     color: black;
     animation: box-shadow 5s infinite;
     box-shadow: 0px 0px 5px 10px $bg-gradient-2;
 
+    width: 30%;
+    @media (max-width: $mobile) {
+        width: 60%;
+        margin: 2rem;
+    }
+
+    margin: 5rem;
     position: fixed;
     top: 0;
     right: 0;
     background-color: $card-color;
-    margin: 5rem;
     text-align: center;
     border-radius: 5px;
     padding: 10px;
-    word-break: break-all;
+    word-break: keep-all;
 
     .icon-check {
         background-color: #00ff58;
