--- a/src/pages/projects/style.scss
+++ b/src/pages/projects/style.scss
@@ -13,7 +13,7 @@
                 color: $text-color-default;
                 border-radius: 5px;
                 box-shadow: 0px 0px 10px 0px $bg-gradient-1;
-                overflow-y: scroll;
+                overflow-y: auto;
 
                 max-width: 400px;
                 height: 381px;
